force-app/main/default/objects/CM_QBR_Meeting__c/CM_QBR_Meeting__c.object-meta.xml
<CustomObject>
    <description>Stores generated QBR meeting preparation content by Account.</description>
    <label>QBR Meeting</label>
    <nameField>
        <displayFormat>QBRM-{000000}</displayFormat>
        <label>QBR Meeting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QBR Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>