force-app/main/default/objects/CM_QBR_Meeting__c/fields/Focus_Department__c.field-meta.xml
<CustomField>
    <fullName>Focus_Department__c</fullName>
    <label>Focus Department</label>
    <length>255</length>
    <type>Text</type>
</CustomField>