force-app/main/default/objects/CM_QBR_Meeting__c/fields/Last_Generated_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Generated_At__c</fullName>
    <label>Last Generated At</label>
    <type>DateTime</type>
</CustomField>