force-app/main/default/objects/CM_QBR_Meeting__c/fields/Prompt_Response__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Response__c</fullName>
    <label>Prompt Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>