force-app/main/default/objects/CM_QBR_Meeting__c/fields/Root_Account__c.field-meta.xml
<CustomField>
    <fullName>Root_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>RootAccountQBRMeetings</relationshipName>
    <type>Lookup</type>
</CustomField>