force-app/main/default/objects/CM_QBR_Meeting__c/fields/Slide_02_Content__c.field-meta.xml
<CustomField>
    <fullName>Slide_02_Content__c</fullName>
    <label>Slide 02 Content</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>